animated mouse icon link working to about us section

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <h1 class="h-top">TO DELANI STUDIO</h1>
             <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</P>
             <div></div>
-        <a href="#about-us"><img src="./assets/mouse/mouse_click.png" alt="" class="mouse-clicker"></a>
+        <a href="#about"><img src="./assets/mouse/mouse_click.png" alt="" class="mouse-clicker"></a>
        </div>
     </header>
     
     <!-- About us -->
     <section class="about-section">
-        <div class="container text-center about-us">
+        <div class="container text-center about-us" id="about">
             <h1>ABOUT US</h1>
             <p>When you work with us, you are part of a team of committed collaborators,
                 All aspects of our software developemnt process are integrated,
