added name and logo for url display in tab bar and working on portfolio hover

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/c8d936677eac9e7f99a617146/211bac94654498f70d89af8ef.js");</script>
-   
-    <title>Document</title>
+    <link rel="icon" href="./assets/logo/fl.ico">
+    <title>Delani studio</title>
 </head>
 <body>
     <!-- Top section -->
@@ -110,36 +109,36 @@
         <div class="container portfolio">
             <h1 class="text-center">PORTFOLIO</h1>
             <div class="row text-center">
-                <div class="col-md-3">
-                    <img src="./assets/portfolio/work4.jpg" alt="">
+                <div class="col-md-3" id="one">
+                    <img  src="./assets/portfolio/work4.jpg" alt="">
+                    <p id="overlay1">Dark</p>
+                </div>
+                <div class="col-md-3" id="two">
+                    <img  src="./assets/portfolio/work3.jpg" alt="">
                     <p></p>
                 </div>
-                <div class="col-md-3">
-                    <img src="./assets/portfolio/work3.jpg" alt="">
-                    <p></p>
-                </div>
-                <div class="col-md-3">
+                <div class="col-md-3" id="three">
                     <img src="./assets/portfolio/work2.jpg" alt="">
-                    <p></p>
+                    <p class="p-text3"></p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" id="four">
                     <img src="./assets/portfolio/work1.jpg" alt="">
                     <p></p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" id="five">
                     <img src="./assets/portfolio/work5.jpg" alt="">
                     <p></p>
                 </div>
-                <div class="col-md-3">
-                    <img src="./assets/portfolio/work6.jpg" alt="">
+                <div class="col-md-3" id="six">
+                    <img  src="./assets/portfolio/work6.jpg" alt="">
                     <p></p>
                 </div>
-                <div class="col-md-3">
-                    <img src="./assets/portfolio/work7.jpg" alt="">
+                <div class="col-md-3" id="seven">
+                    <img  src="./assets/portfolio/work7.jpg" alt="">
                     <p></p>
                 </div>
-                <div class="col-md-3">
-                    <img src="./assets/portfolio/work8.jpg" alt="">
+                <div class="col-md-3" id="eight">
+                    <img  src="./assets/portfolio/work8.jpg" alt="">
                     <p></p>
                 </div>
             </div>
