--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Reggae+One&display=swap" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="icon" href="./assets/logo/fl.ico">
+    <link rel="stylesheet" href="http://eepurl.com/hrzh5f">
     <title>Delani studio</title>
+
+    <!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <!-- Top section -->
@@ -108,46 +111,84 @@
     <section>
         <div class="container portfolio">
             <h1 class="text-center">PORTFOLIO</h1>
-            <div class="row text-center">
+            <div class="row">
                 <div class="col-md-3" id="one">
                     <img  src="./assets/portfolio/work4.jpg" alt="">
-                    <p id="overlay1">Dark</p>
+                    <p id="lay1" class="text">Dark</p>
                 </div>
                 <div class="col-md-3" id="two">
                     <img  src="./assets/portfolio/work3.jpg" alt="">
-                    <p></p>
+                    <p id="lay2"></p>
                 </div>
                 <div class="col-md-3" id="three">
                     <img src="./assets/portfolio/work2.jpg" alt="">
-                    <p class="p-text3"></p>
+                    <p id="lay3"></p>
                 </div>
                 <div class="col-md-3" id="four">
                     <img src="./assets/portfolio/work1.jpg" alt="">
-                    <p></p>
+                    <p id="lay4"></p>
                 </div>
                 <div class="col-md-3" id="five">
                     <img src="./assets/portfolio/work5.jpg" alt="">
-                    <p></p>
+                    <p id="lay5"></p>
                 </div>
                 <div class="col-md-3" id="six">
                     <img  src="./assets/portfolio/work6.jpg" alt="">
-                    <p></p>
+                    <p id="lay6"></p>
                 </div>
                 <div class="col-md-3" id="seven">
                     <img  src="./assets/portfolio/work7.jpg" alt="">
-                    <p></p>
+                    <p id="lay7"></p>
                 </div>
                 <div class="col-md-3" id="eight">
                     <img  src="./assets/portfolio/work8.jpg" alt="">
-                    <p></p>
+                    <p id="lay8"></p>
                 </div>
             </div>
         </div>
     </section>
 
+   
+
+        <section>
+            <div class="container-fluid contact">
+                <h1 class="text-center">CONTACT US</h1>
+                <div id="mc_embed_signup">
+                    <form action="https://gmail.us1.list-manage.com/subscribe/post?u=c8d936677eac9e7f99a617146&amp;id=3c77bbcd39" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                        <!-- <div class="indicates-required text-dark"><span class="asterisk">*</span> indicates required</div> -->
+                            <div class="row">
+                                <div class="mc-field-group col">
+                                    <!-- <label for="mce-FNAME" class="text-dark">First Name  <span class="asterisk">*</span>
+                                    </label> -->
+                                    <input type="text" value="" name="FNAME" class="required name form-control" id="mce-FNAME" placeholder="name">
+                                </div>
+                                <div class="mc-field-group col">
+                                    <!-- <label for="mce-EMAIL" class="text-dark">Email Address  <span class="asterisk">*</span>
+                                    </label> -->
+                                    <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="email">
+                                </div>
+                                <div class="mc-field-group">
+                                    <!-- <label for="mce-Message" class="text-dark">Your message..... <span class="asterisk">*</span>
+                                    </label> -->
+                                    <textarea type="text" value="" name="Message" class="text form-control" id="mce-Message" placeholder="enter your message" rows="12"></textarea>
+                                </div>
+                                <div id="mce-responses" class="clear">
+                                    <div class="response" id="mce-error-response" style="display:none"></div>
+                                    <div class="response" id="mce-success-response" style="display:none"></div>
+                                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c8d936677eac9e7f99a617146_3c77bbcd39" tabindex="-1" value=""></div>
+                                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+
 
 <!-- Contact section -->
-    <section>
+    <!-- <section>
         <div class="container-fluid contact">
             <h1 class="text-center">CONTACT US</h1>
             <form class="form-fill">
@@ -164,7 +205,7 @@
                 </div>
             </form>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- footer -->
@@ -190,5 +231,10 @@
 
 
     <script src="./assets/app.js"></script> 
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
 </body>
 </html>
+
+
+
