centered portfolio elements

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <section>
         <div class="container portfolio">
             <h1 class="text-center">PORTFOLIO</h1>
-            <div class="row" id="work">
+            <div class="row text-center" id="work">
                 <div class="col-md-3" id="one">
                     <img  src="./assets/portfolio/work4.jpg" alt="" id="one">
                     <p id="lay1" class="text">Dark</p>
@@ -128,7 +128,7 @@
                     <img src="./assets/portfolio/work1.jpg" alt="" id="four">
                     <p id="lay4"></p>
                 </div>
-                <div class="row" id="work">
+                <div class="row text-center" id="work">
                 <div class="col-md-3" id="five">
                     <img src="./assets/portfolio/work5.jpg" alt="" id="five">
                     <p id="lay5"></p>
