Added hover effect on social-media icons

--- a/index.html
+++ b/index.html
@@ -150,8 +150,6 @@
         </div>
     </section>
 
-
-    <section>
         <div class="container-fluid contact">
             <h1 class="text-center">CONTACT US</h1>
             <div id="mc_embed_signup">
@@ -213,15 +211,15 @@
     <footer class="bg-light text-center text-white">
         <div class="container p-4 pb-0">
             <section class="mb-4">
-                <a href="#"><img src="./assets/social_icons/twitter.png" alt=""></a>
-                <a href="#"><img src="./assets/social_icons/dribble.png" alt=""></a>
-                <a href="#"><img src="./assets/social_icons/facebook.png" alt=""></a>
-                <a href="#"><img src="./assets/social_icons/g_plus.png" alt=""></a>
-                <a href="#"><img src="./assets/social_icons/skype.png" alt=""></a>
-                <a href="#"><img src="./assets/social_icons/stumble_upon.png" alt=""></a>
-                <a href="#"><img src="./assets/social_icons/behance.png" alt=""></a>
-                <a href="#"><img src="./assets/social_icons/pinterest.png" alt=""></a>
-                <a href="#"><img src="./assets/social_icons/flickr.png" alt=""></a>
+                <a href="#"><img class="zoom" src="./assets/social_icons/twitter.png" alt=""></a>
+                <a href="#"><img class="zoom" src="./assets/social_icons/dribble.png" alt=""></a>
+                <a href="#"><img class="zoom" src="./assets/social_icons/facebook.png" alt=""></a>
+                <a href="#"><img class="zoom" src="./assets/social_icons/g_plus.png" alt=""></a>
+                <a href="#"><img class="zoom" src="./assets/social_icons/skype.png" alt=""></a>
+                <a href="#"><img class="zoom" src="./assets/social_icons/stumble_upon.png" alt=""></a>
+                <a href="#"><img class="zoom" src="./assets/social_icons/behance.png" alt=""></a>
+                <a href="#"><img class="zoom" src="./assets/social_icons/pinterest.png" alt=""></a>
+                <a href="#"><img class="zoom" src="./assets/social_icons/flickr.png" alt=""></a>
             </section>
         </div>
         <div class=" footer text-center p-3">
