center elements in footer

--- a/index.html
+++ b/index.html
@@ -211,19 +211,19 @@
     <footer class="bg-light text-center text-white">
         <div class="container p-4 pb-0">
             <section class="mb-4">
-                <a href="#"><img class="zoom" src="./assets/social_icons/twitter.png" alt=""></a>
-                <a href="#"><img class="zoom" src="./assets/social_icons/dribble.png" alt=""></a>
-                <a href="#"><img class="zoom" src="./assets/social_icons/facebook.png" alt=""></a>
-                <a href="#"><img class="zoom" src="./assets/social_icons/g_plus.png" alt=""></a>
-                <a href="#"><img class="zoom" src="./assets/social_icons/skype.png" alt=""></a>
-                <a href="#"><img class="zoom" src="./assets/social_icons/stumble_upon.png" alt=""></a>
-                <a href="#"><img class="zoom" src="./assets/social_icons/behance.png" alt=""></a>
-                <a href="#"><img class="zoom" src="./assets/social_icons/pinterest.png" alt=""></a>
-                <a href="#"><img class="zoom" src="./assets/social_icons/flickr.png" alt=""></a>
+                <a href="#"><img class="zoom text-center" src="./assets/social_icons/twitter.png" alt=""></a>
+                <a href="#"><img class="zoom text-center" src="./assets/social_icons/dribble.png" alt=""></a>
+                <a href="#"><img class="zoom text-center" src="./assets/social_icons/facebook.png" alt=""></a>
+                <a href="#"><img class="zoom text-center" src="./assets/social_icons/g_plus.png" alt=""></a>
+                <a href="#"><img class="zoom text-center" src="./assets/social_icons/skype.png" alt=""></a>
+                <a href="#"><img class="zoom text-center" src="./assets/social_icons/stumble_upon.png" alt=""></a>
+                <a href="#"><img class="zoom text-center" src="./assets/social_icons/behance.png" alt=""></a>
+                <a href="#"><img class="zoom text-center" src="./assets/social_icons/pinterest.png" alt=""></a>
+                <a href="#"><img class="zoom text-center" src="./assets/social_icons/flickr.png" alt=""></a>
             </section>
         </div>
-        <div class=" footer text-center p-3">
-            <h3>DELANI STUDIO</h3>
+        <div class=" footer text-center">
+            <h3 class="text-center">DELANI STUDIO</h3>
             <P>2021</P>
         </div>
     </footer>
