--- a/index.html
+++ b/index.html
@@ -150,32 +150,26 @@
         </div>
     </section>
 
+        <!-- Contact section with mailchimp -->
         <div class="container-fluid contact">
             <h1 class="text-center">CONTACT US</h1>
             <div id="mc_embed_signup">
                 <form action="https://gmail.us1.list-manage.com/subscribe/post?u=c8d936677eac9e7f99a617146&amp;id=3c77bbcd39" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
-                    <!-- <div class="indicates-required text-dark"><span class="asterisk">*</span> indicates required</div> -->
                         <div class="row">
                             <div class="mc-field-group col">
-                                <!-- <label for="mce-FNAME" class="text-dark">First Name  <span class="asterisk">*</span>
-                                </label> -->
                                 <input type="text" value="" name="FNAME" class="required name form-control" id="mce-FNAME" placeholder="name">
                             </div>
                             <div class="mc-field-group col">
-                                <!-- <label for="mce-EMAIL" class="text-dark">Email Address  <span class="asterisk">*</span>
-                                </label> -->
                                 <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="email">
                             </div>
                             <div class="mc-field-group">
-                                <!-- <label for="mce-Message" class="text-dark">Your message..... <span class="asterisk">*</span>
-                                </label> -->
                                 <textarea type="text" value="" name="Message" class="text form-control" id="mce-Message" placeholder="enter your message" rows="12"></textarea>
                             </div>
                             <div id="mce-responses" class="clear">
                                 <div class="response" id="mce-error-response" style="display:none"></div>
                                 <div class="response" id="mce-success-response" style="display:none"></div>
-                            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            </div>   
                             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c8d936677eac9e7f99a617146_3c77bbcd39" tabindex="-1" value="" onclick="formMessage()"></div>
                             <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" onclick="formMessage()"></div>
                         </div>
@@ -184,27 +178,6 @@
             </div>
         </div>
     </section>
-
-
-<!-- Contact section -->
-    <!-- <section>
-        <div class="container-fluid contact">
-            <h1 class="text-center">CONTACT US</h1>
-            <form class="form-fill">
-                <div class="row text-center">
-                    <div class="col">
-                        <input class="form-control text-white" type="text"  placeholder="Name...." required>
-                    </div>
-                    <div class="col">
-                        <input class="form-control  text-white" type="text" placeholder="Email...." required>
-                    </div>
-                </div>
-                <div class="form-group message">
-                <textarea class="form-control mess" name="" id="" cols="119" rows="12" placeholder="Your message here......"></textarea>
-                </div>
-            </form>
-        </div>
-    </section> -->
 
 
     <!-- footer -->
