--- a/index.html
+++ b/index.html
@@ -114,36 +114,36 @@
             <div class="row text-center" id="work">
                 <div class="col-md-3" id="one">
                     <img  src="./assets/portfolio/work4.jpg" alt="" id="one">
-                    <p id="lay1">Dark Theme</p>
+                    <p id="lay1">Dark <br> Theme</p>
                 </div>
                 <div class="col-md-3" id="two">
                     <img  src="./assets/portfolio/work3.jpg" alt="" id="two">
-                    <p id="lay2">Ontario Security</p>
+                    <p id="lay2">Ontario <br> Security</p>
                 </div>
                 <div class="col-md-3" id="three">
                     <img src="./assets/portfolio/work2.jpg" alt="" id="three">
-                    <p id="lay3">Pyramids Scheme</p>
+                    <p id="lay3">Pyramids <br> Scheme</p>
                 </div>
                 <div class="col-md-3" id="four">
                     <img src="./assets/portfolio/work1.jpg" alt="" id="four">
-                    <p id="lay4">Jim Carrey</p>
+                    <p id="lay4">Jim <br> Carrey</p>
                 </div>
                 <div class="row text-center" id="work">
                 <div class="col-md-3" id="five">
                     <img src="./assets/portfolio/work5.jpg" alt="" id="five">
-                    <p id="lay5">Elexa Website</p>
+                    <p id="lay5">Elexa <br> Website</p>
                 </div>
                 <div class="col-md-3" id="six">
                     <img  src="./assets/portfolio/work6.jpg" alt="" id="six">
-                    <p id="lay6">Button Display</p>
+                    <p id="lay6">Button <br> Display</p>
                 </div>
                 <div class="col-md-3" id="seven">
                     <img  src="./assets/portfolio/work7.jpg" alt="" id="seven">
-                    <p id="lay7">Burned Logo</p>
+                    <p id="lay7">Burned <br> Logo</p>
                 </div>
                 <div class="col-md-3" id="eight">
                     <img  src="./assets/portfolio/work8.jpg" alt="" id="eight">
-                    <p id="lay8">Giraffe Restaurant</p>
+                    <p id="lay8">Giraffe <br> Restaurant</p>
                 </div>
                 </div>
             </div>
