just making sure my fields have rules

--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
                     <div id="mc_embed_signup_scroll">
                         <div class="row">
                             <div class="mc-field-group col">
-                                <input type="text" value="" name="FNAME" class="required name form-control" id="mce-FNAME" placeholder="name">
+                                <input type="text" value="" name="FNAME" class="required name form-control" id="mce-FNAME" placeholder="name" required>
                             </div>
                             <div class="mc-field-group col">
-                                <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="email">
+                                <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="email" required>
                             </div>
                             <div class="mc-field-group">
                                 <textarea type="text" value="" name="Message" class="text form-control" id="mce-Message" placeholder="enter your message" rows="12"></textarea>
